--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,10 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+retrofit2Version=2.3.0
+org.gradle.parallel=true
+butterknifeVersion=8.8.1
+annotationsVersion=3.3
+picassoVersion=2.5.2
+supportVersion=27.0.2
+daggerVersion=2.14.1
