--- a/gradle.properties
+++ b/gradle.properties
@@ -1,24 +1,25 @@
-# Project-wide Gradle settings.
-
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-
+## Project-wide Gradle settings.
+#
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
-
+#
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
-
+# Default value: -Xmx1024m -XX:MaxPermSize=256m
+# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+#Fri Mar 09 14:47:09 IRST 2018
+systemProp.http.proxyPort=1717
 retrofit2Version=2.3.0
 org.gradle.parallel=true
 butterknifeVersion=8.8.1
+org.gradle.jvmargs=-Xmx1536m
 annotationsVersion=3.3
 picassoVersion=2.5.2
 supportVersion=27.0.2
+systemProp.http.proxyHost=127.0.0.1
 daggerVersion=2.14.1
