--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     // Android Support libs
     [
             'design',
@@ -60,34 +60,34 @@ dependencies {
             'cardview-v7',
             'support-annotations'
     ].each {
-        compile "com.android.support:${it}:${supportVersion}"
+        implementation "com.android.support:${it}:${supportVersion}"
     }
     // network
-    compile "com.squareup.retrofit2:retrofit:${retrofit2Version}"
-    compile "com.squareup.retrofit2:adapter-rxjava2:${retrofit2Version}"
-    compile "com.squareup.retrofit2:converter-gson:${retrofit2Version}"
+    implementation "com.squareup.retrofit2:retrofit:${retrofit2Version}"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:${retrofit2Version}"
+    implementation "com.squareup.retrofit2:converter-gson:${retrofit2Version}"
     // parser
-    compile 'com.google.code.gson:gson:2.8.1'
+    implementation 'com.google.code.gson:gson:2.8.1'
     // dependency injection
-    compile 'javax.inject:javax.inject:1'
-    compile "com.google.dagger:dagger:${daggerVersion}"
+    implementation 'javax.inject:javax.inject:1'
+    implementation "com.google.dagger:dagger:${daggerVersion}"
     annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
-    provided "com.google.dagger:dagger-compiler:${daggerVersion}"
-    provided 'javax.annotation:jsr250-api:1.0'
-    provided 'org.glassfish:javax.annotation:10.0-b28'
+    compileOnly "com.google.dagger:dagger-compiler:${daggerVersion}"
+    compileOnly 'javax.annotation:jsr250-api:1.0'
+    compileOnly 'org.glassfish:javax.annotation:10.0-b28'
     // reactive
-    compile 'io.reactivex.rxjava2:rxjava:2.1.4'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.4'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     // logger
-    compile 'com.jakewharton.timber:timber:4.5.1'
+    implementation 'com.jakewharton.timber:timber:4.5.1'
     // ui
-    compile "com.squareup.picasso:picasso:${picassoVersion}"
-    compile "com.jakewharton:butterknife:${butterknifeVersion}"
+    implementation "com.squareup.picasso:picasso:${picassoVersion}"
+    implementation "com.jakewharton:butterknife:${butterknifeVersion}"
     annotationProcessor "com.jakewharton:butterknife-compiler:${butterknifeVersion}"
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
     //other
-    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.android.support:multidex:1.0.2'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
