--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ allprojects {
         google()
         mavenCentral()
         jcenter()
+        maven { url 'https://maven.google.com' }
     }
 }
 
