How to open next Category is changed + Open CategoryList fragment just if it's not a Leaf.

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,8 +12,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Fri Mar 09 14:47:09 IRST 2018
-#systemProp.http.proxyPort=1717
+#Thu Mar 15 16:13:22 IRST 2018
+systemProp.http.proxyPort=1717
 retrofit2Version=2.3.0
 org.gradle.parallel=true
 butterknifeVersion=8.8.1
@@ -21,9 +21,5 @@ org.gradle.jvmargs=-Xmx1536m
 annotationsVersion=3.3
 picassoVersion=2.5.2
 supportVersion=27.0.2
-#systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyHost=127.0.0.1
 daggerVersion=2.14.1
-#systemProp.http.proxyHost=mirror.mbaas.ir
-#systemProp.http.proxyPort=8700
-#systemProp.https.proxyHost=mirror.mbaas.ir
-#systemProp.https.proxyPort=8700
