--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:${retrofit2Version}"
     implementation "com.squareup.retrofit2:adapter-rxjava2:${retrofit2Version}"
     implementation "com.squareup.retrofit2:converter-gson:${retrofit2Version}"
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     // parser
     implementation 'com.google.code.gson:gson:2.8.1'
     // dependency injection
