--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'realm-android'
 
 android {
@@ -45,6 +48,13 @@ android {
             sourceCompatibility JavaVersion.VERSION_1_8
             targetCompatibility JavaVersion.VERSION_1_8
         }
+
+        sourceSets {
+            main {
+                java.srcDirs = ['src/main/java']
+                kotlin.srcDirs = ['src/main/kotlin']
+            }
+        }
     }
 }
 
@@ -63,7 +73,7 @@ dependencies {
         implementation "com.android.support:${it}:${supportVersion}"
     }
     // database
-    annotationProcessor 'dk.ilios:realmfieldnameshelper:1.1.1'
+    kapt 'dk.ilios:realmfieldnameshelper:1.1.1'
     // network
     implementation "com.squareup.retrofit2:retrofit:${retrofit2Version}"
     implementation "com.squareup.retrofit2:adapter-rxjava2:${retrofit2Version}"
@@ -74,8 +84,7 @@ dependencies {
     // dependency injection
     implementation 'javax.inject:javax.inject:1'
     implementation "com.google.dagger:dagger:${daggerVersion}"
-    annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
-    compileOnly "com.google.dagger:dagger-compiler:${daggerVersion}"
+    kapt "com.google.dagger:dagger-compiler:${daggerVersion}"
     compileOnly 'javax.annotation:jsr250-api:1.0'
     compileOnly 'org.glassfish:javax.annotation:10.0-b28'
     // reactive
@@ -86,13 +95,31 @@ dependencies {
     // ui
     implementation "com.squareup.picasso:picasso:${picassoVersion}"
     implementation "com.jakewharton:butterknife:${butterknifeVersion}"
-    annotationProcessor "com.jakewharton:butterknife-compiler:${butterknifeVersion}"
+    kapt "com.jakewharton:butterknife-compiler:${butterknifeVersion}"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
     //other
     implementation 'com.android.support:multidex:1.0.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.anko:anko:$anko_version"
+    kapt "com.android.databinding:compiler:$android_plugin_version"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+}
+
+buildscript {
+    ext.android_plugin_version = '3.0.1'
+    ext.kotlin_version = '1.2.31'
+    ext.anko_version = '0.10.4'
+
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
+    }
 }
