Convert NetworkUtils to Kotlin.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,8 +51,7 @@ android {
 
         sourceSets {
             main {
-                java.srcDirs = ['src/main/java']
-                kotlin.srcDirs = ['src/main/kotlin']
+                java.srcDirs += 'src/main/kotlin'
             }
         }
     }
