Check push to git issue.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -138,3 +138,6 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
     }
 }
+
+
+//Just to test git and the proxy and check push issue.
